test/classes/delete-free/tests-from-design-overview/generic-collection-owned-borrow-error.good
generic-collection-owned-borrow-error.chpl:13: In function 'test':
generic-collection-owned-borrow-error.chpl:16: error: unresolved type specifier 'Collection(type MyClass)'
generic-collection-owned-borrow-error.chpl:5: note: candidates are: Collection(type element)
